added ForEach filter and find

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <!-- <script src="js/arrowFunction.js"></script>
     <script src="js/destructure.js"></script> -->
     <!-- <script src="js/object.js"></script> -->
-<script src="js/spread.js"></script>
+<script src="js/arrayMethod.js"></script>
 </body>
 </html>
